# MANDAS-2.0

./: .env.example  .gitignore  CHANGELOG-V1.3.md  CONTRIBUTING.md  Dockerfile.test  MANDAS_V1.3_COMPREHENSIVE_TEST_REPORT.md  MANDAS_V1.3_END_TO_END_REPORT.md  MANDAS_V1.3_TEST_REPORT.md  Makefile  Mandas Modular Agent System - V0.5 项目计划  Mandas Modular Agent System - 系统架构设计文档 (SAD)  Mandas Modular Agent System 最终可落地版 PRD 文档.txt  Manus Modular Agent System 最终可落地版 PRD 文档.txt  README.md  SYSTEM_ARCHITECTURE_V1.2.md  TESTING.md  TEST_COMPLETION_REPORT.md  V0.6_FINAL_VERIFICATION_REPORT.md  V0.6_VERIFICATION_REPORT.md  check_github_status.py  debug_execution_issue.py  debug_llm_router.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  final_v13_comprehensive_test.py  pytest.ini  quick_test.py  requirements-dev.txt  run_tests.sh  test_taskplanner.py  test_v06_comprehensive.py  test_v06_functional.py  test_v06_integration.py  test_v06_security.py  test_v12_architecture.py  test_v12_end_to_end.py  test_v13_api_endpoints.py  test_v13_comprehensive.py  test_v13_end_to_end.py  (+2 more)
Mandas Modular Agent System - UI/: UX 设计说明
database/: init.sql
docs/: MANDAS_V2.0_API_SPECIFICATION.md  (+2 more)
services/agent-worker/: .env.example  Dockerfile  pyproject.toml
services/agent-worker/app/: main.py  main_v13.py
services/agent-worker/app/agents/: agent_manager.py
services/agent-worker/app/agents/manager/: README.md  group_chat_manager.py
services/agent-worker/app/agents/router/: README.md  llm_router_agent.py
services/agent-worker/app/api/v1/: tools.py
services/agent-worker/app/core/: base_agent.py  base_tool.py  config.py  database.py  legacy_logging.py  logging.py  redis_client.py  smart_llm_client.py  tracing.py
services/agent-worker/app/core/agents/: default_agent.py  planner_agent.py
services/agent-worker/app/core/logging/: enhanced_logger.py
services/agent-worker/app/core/planning/: __init__.py  planner.py
services/agent-worker/app/core/security/: README.md  execution_guard.py
services/agent-worker/app/core/tools/: README.md  tool_registry.py
services/agent-worker/app/core/tools/impl/: code_runner_tool.py  file_reader_tool.py
services/agent-worker/app/llm/: llm_router.py
services/agent-worker/app/memory/: memory_manager.py
services/agent-worker/app/tools/: tool_executor.py
services/agent-worker/app/worker/: task_consumer.py
services/agent-worker/configs/: model_metadata.yaml
services/agent-worker/tools.d/: echo_tool.yaml  python_executor.yaml  shell_executor.yaml
services/api-gateway/: .env.example  Dockerfile  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/v1/: auth.py  documents.py  health.py  memory.py  tasks.py  tools.py
services/api-gateway/app/core/: auth.py  config.py  database.py  logging.py  redis_client.py  tracing.py
(+35 files in other folders)
